--- a/src/RuneGlossary.Client.WASM/wwwroot/index.html
+++ b/src/RuneGlossary.Client.WASM/wwwroot/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>RuneGlossary.Client.WASM</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="RuneGlossary.Client.WASM.styles.css" rel="stylesheet" />
 </head>
 
-<body>
+<body style="margin: 0px">
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
